--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🏪 Loja Express</h1>
+            <h1>🏪 JAMA LANCHES & 24H</h1>
             <p class="subtitle">Sistema de Vendas e Controle de Estoque</p>
         </header>
 
