Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🏪 JAMA Lanches</h1>
+            <h1>🏪 JAVA Lanches</h1>
             <p class="subtitle">Sistema de Vendas e Controle de Estoque</p>
         </header>
 
